[package]
name = "graft"
version = "0.1.0"
authors = ["Amit Upadhyay <amitu@acko.com>"]
description = "json tree builder"
license = "BSD-2-Clause"

[dependencies]
serde_json = "~1.0.32"
sorted-json = "~0.1.0"
serde = "~1.0.27"
failure = "~0.1.1"

[dev-dependencies]
textwrap = "0.10.0"
assert_snapshot = "~0.1.3"
