[package]
name = "graft"
version = "0.1.5"
authors = ["Amit Upadhyay <amitu@acko.com>"]
description = "json tree builder"
license = "BSD-2-Clause"
edition = "2018"

[dependencies]
serde_json = "~1.0.32"
serde = "~1.0.27"
failure = "~0.1.1"
textwrap = "0.10.0"
serde_yaml = "0.8.7"
comrak = "0.3.1"
csv = "~1.0.0"

[dev-dependencies]
pretty_assertions = "~0.5.1"
